--- a/frameworks/g-cloud-7/manifests/display_service.yml
+++ b/frameworks/g-cloud-7/manifests/display_service.yml
@@ -106,7 +106,7 @@
     - configurationTracking
     - changeImpactAssessment
 -
-  name: Vulnerabilility management
+  name: Vulnerability management
   questions:
     - vulnerabilityAssessment
     - vulnerabilityMonitoring
