--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/locationParticipants.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/locationParticipants.yml
@@ -6,7 +6,8 @@ question_advice: |
 
   Suppliers have said where they can recruit participants.
 
-  [View region map (PDF, 262KB)](https://geoportal.statistics.gov.uk/Docs/Maps/Regions_(Eng)_2011_map.pdf)
+  [View locations (PDF, 262KB)](http://www.ons.gov.uk/ons/guide-method/geography/beginner-s-guide/maps/regions--former-government-office-regions--gors---effective-at-31st-december--2011.pdf)
+depends:
 type: radios
 options:
   - label: "Scotland"
