--- a/frameworks/g-cloud-9/questions/declaration/termsAndConditions.yml
+++ b/frameworks/g-cloud-9/questions/declaration/termsAndConditions.yml
@@ -1,4 +1,4 @@
 name: Terms and conditions
 question: >
-  Do you accept the terms and conditions in the <a href="/suppliers/frameworks/g-cloud-9" target="_blank">framework agreement and call-off contract documents</a>?
+  Do you accept the terms and conditions in the <a href="/suppliers/frameworks/g-cloud-9" target="_blank" rel="noopener noreferrer">framework agreement and call-off contract documents (new tab)</a>?
 type: boolean
